service.yaml
apiVersion: v1
kind: Service
metadata:
  name: covoiturage-service
spec:
  selector:
    app: covoiturage
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    nodePort: 30080
